2007-04-27 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

	* src/x_image.c: Added sanity check.
	
	* po/es_ES.po: Updated spanish translation.
	
2007-04-22 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

	* include/prototype.h, src/g_keys.c, src/g_register.c,
	  i_callbacks.c: Remove "help-manual" Guile callback.

	  Apply patch by Peter Brett.

	  The role of the "help-manual" Guile function exported by
	  gschem has been superceded by the new "gschem-browse-wiki"
	  function.  This patch removes "help-manual" from the C
	  source code entirely; "help-manual" is now a Scheme function
	  defined in "system-gschemrc".


	* lib/system-gschemrc.in: Use gschem-browse-wiki also
	  when opening the manual. 

	  Found a workaround to use gschem-browse-wiki if the user 
	  wants to display the manual (the manual page is not in 
	  the wiki directory).

2007-04-21 Ales Hvezda   <ahvezda@geda.seul.org>

	* gschem/po/de_DE.po gschem/po/es_ES.po gschem/po/fr_FR.po
	gschem/po/geda-gschem.pot gschem/po/it_IT.po gschem/po/ja_JP.po
	gschem/po/nl_NL.po gschem/po/pt_BR.po gschem/po/ru.po: Updated
	all po and pot files (via make dist) in prep for a release
	(a few weeks from now).

2007-04-21 Peter Clifton <pcjc2@cam.ac.uk>

	* src/gschem.c, src/i_callbacks.c, src/x_fileselect.c, src/x_pagesel.c,
	  src/x_window.c: Cleaned up and consolidated code which creates
	  new pages.  This makes the code cleaner and easier to read,
	  and fixes bugs related to stray, "unknown" named pages being
	  left when creating a new window.  Fixes bug #1699970, with
	  changes based upon patch #1704834.

	* src/o_undo.c: Whitespace and readability fixes, removed some
	  unused code.

2007-04-21  Mike Jarabek  <mjarabek@sentex.ca>

	* scripts/print.scm: Commented out first the four lines so that
	  printing defaults don't get accidentally overridden.

2007-04-21 Peter Brett <peter@peter-b.co.uk>

	* lib/system-gschemrc.in: Change keystrokes for grid size change
	shortcuts.
