@@ -834,6 +834,10 @@ GtkWidget *get_main_popup(TOPLEVEL *w_current);
 gint do_popup(TOPLEVEL *w_current, GdkEventButton *event);
 void x_menus_sensitivity(TOPLEVEL *w_current, const char *buf, int flag);
 void x_menus_popup_sensitivity(TOPLEVEL *w_current, const char *buf, int flag);
+void x_menu_attach_recent_files_submenu(TOPLEVEL *w_current);
+void recent_files_load();
+void recent_files_save();
+void recent_files_add(const char *filename);
 /* x_multiattrib.c */
 void x_multiattrib_open (TOPLEVEL *toplevel, OBJECT *object);
 /* x_multimulti.c */
